--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,8 +9,13 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+  cursor: pointer;
 }
 
 * {
   box-sizing: border-box;
 }
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
